--- a/demo/index.html
+++ b/demo/index.html
@@ -33,7 +33,7 @@
 	</style>
 
 	<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-	<script src="../bower_components/angular/angular.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.min.js"></script>
 	<script src="//rawgit.com/xremix/xGallerify/master/dist/jquery.xgallerify.min.js"></script>
 	<script src="app.js"></script>
 	<script src="../src/angular-xgallerify.js"></script>
