fix: fixed bug when directive attr has no params

--- a/demo/index.html
+++ b/demo/index.html
@@ -39,7 +39,7 @@
 	<script src="../src/angular-xgallerify.js"></script>
 </head>
 <body ng-app="app">
-	<div xgallerify="{'margin':10}">
+	<div xgallerify="{'margin':10, 'mode':'bootstrap'}">
 		<div class="photo">
 			<img src="http://placehold.it/600x400">
 			<div class="title">1</div>
